Fix: title-desc spacing, project colour

--- a/src/partials/_footer.scss
+++ b/src/partials/_footer.scss
@@ -26,7 +26,7 @@ footer {
   @media (max-width: 1350px) {
     margin-top: calc(60px + 6%);
   }
-  @media (max-width: 750px) {
+  @media (max-width: 860px) {
     margin-top: 35%;
   }
 }
