--- a/src/partials/_project.scss
+++ b/src/partials/_project.scss
@@ -11,7 +11,7 @@
     grid-template-columns: repeat(2, 1fr);
     gap: 1% 2%; // Since fewer columns, increase horizontal gap slightly
   }
-  @media (max-width: 750px) {
+  @media (max-width: 860px) {
     grid-template-columns: repeat(1, 1fr);
     gap: 1% 0%; // No horizontal gap needed for a single column
   }
@@ -41,6 +41,9 @@
       transform: translate(-50%, -50%);
       width: 100px;
       height: 100px;
+      @media (max-width: 860px) {
+        transform: translate(-50%, -70%);
+      }
     }
     .title-description-container {
       position: absolute;
@@ -50,8 +53,8 @@
       h4 {
         text-transform: uppercase;
         letter-spacing: 0.5px;
-        // 2.5px less because of h5's line-height
-        margin-bottom: 5px;
+        // 5px less because of h5's line-height
+        margin-bottom: 2.5px;
       }
       h5 {
         font-family: $secondaryFont;
@@ -94,5 +97,5 @@
 }
 
 .gitcheck {
-  background-color: #929b9b;
+  background-color: #aab3b3;
 }
